--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "16.6.3",
     "react-native": "0.58.6",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-qrcode": "^0.2.7",
+    "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.9.1",
     "styled-components": "^4.2.0"
   },
